--- a/post/templates/post_list.html
+++ b/post/templates/post_list.html
@@ -49,8 +49,8 @@ h1 {
 <ul class="post-list">
   {% for post in context %}
     <li class="post">
-      <h2>{{ post.title }}</h2>
-      <p>{{ post.content }}</p>
+      <h2><a href="{{ post.id }}">{{ post.title }}</a></h2>
+      <p><a href="{{post.id}}"></a>{{ post.content }}</p>
     </li>
   {% endfor %}
 </ul>
